--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "prettier-fix": "prettier --write ."
   },
   "private": true,
   "dependencies": {
@@ -59,6 +60,7 @@
     "karma-coverage-istanbul-reporter": "3.0.3",
     "karma-jasmine": "4.0.2",
     "karma-jasmine-html-reporter": "1.7.0",
+    "prettier": "^2.6.2",
     "ts-node": "10.7.0",
     "typescript": "4.6.3"
   }
