--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.26</version>
+        </dependency>
     </dependencies>
 
     <build>
