--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "jquery": "3.6.0",
     "jwt-decode": "3.1.2",
     "lodash": "4.17.21",
+    "ng-bootstrap-icons": "^13.1.2-canary.1",
     "rxjs": "7.5.5",
     "tslib": "2.3.1",
     "zone.js": "0.11.5"
