#19: update unit and e2e tests

--- a/e2e/package.json
+++ b/e2e/package.json
@@ -13,7 +13,8 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cypress": "cypress run"
+    "cypress": "cypress run",
+    "cypress:open": "cypress open"
   },
   "author": "Heimo Stranner",
   "license": "ISC"
