#17: add mailSender test

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.icegreen</groupId>
+            <artifactId>greenmail-junit5</artifactId>
+            <version>1.6.5</version>
+            <scope>test</scope>
+        </dependency>
         <!-- mail -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
