--- a/backend/src/test/resources/application-test.yml
+++ b/backend/src/test/resources/application-test.yml
@@ -7,3 +7,9 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+  mail:
+    password: password
+    username: tester
+    host: 127.0.0.1
+    port: 3025
+    protocol: smtp
