--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,10 +6,10 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:h2:file:./database/db;AUTO_SERVER=TRUE;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    driver-class-name: org.h2.Driver
-    username: admin
-    password: password
+    url: jdbc:postgresql://localhost:5432/db
+    driver-class-name: org.postgresql.Driver
+    username: aktoria-admin
+    password: aktoria-admin
   jpa:
     # Set this property to true if you want to see the executed queries
     show-sql: false
