--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,4 +15,4 @@ services:
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=mydb
+      - POSTGRES_DB=aktoria
