--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -6,7 +6,7 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:postgresql://db:5432/aktoria
+    url: jdbc:postgresql://localhost:5432/aktoria
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: password
