#21: fix a few tests; fix endpoints for restfulness; increased max file upload size

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -27,6 +27,9 @@ spring:
     host: mail.gmx.net
     port: 587
     protocol: smtp
+  servlet:
+    multipart:
+      max-file-size: 10MB
 
 security:
   auth:
