--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -34,7 +34,8 @@
         ],
         "id-blacklist": "off",
         "id-match": "off",
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "max-len": ["error", { "code": 200 }]
       }
     },
     {
