--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,7 +3,6 @@ logging:
   level:
     root: INFO
     org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping: TRACE
-    at.ac.tuwien.sepm.groupphase.backend: DEBUG
 
 spring:
   datasource:
@@ -16,8 +15,8 @@ spring:
     show-sql: false
     hibernate:
       ddl-auto: create
-    # Allows to fetch lazy properties outside of the original transaction. Although this sounds helpful, the property
-    # is disabled since it breaks the principle of least astonishment and leads to bad performance. The learn more,
+    # Allows to fetch lazy properties outside the original transaction. Although this sounds helpful, the property
+    # is disabled since it breaks the principle of the least astonishment and leads to bad performance. To learn more,
     # follow this link: https://bit.ly/2LaX9ku
     open-in-view: false
     database: postgresql
