#63: migrated database successfully and testing of kubernetes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,3 +71,4 @@ deploy:
     curl -H 'X-DeployToken: '$DEPLOY_TOKEN -H 'Content-type: application/json' -vf -XPUT --data '{"image": "'$CI_PROJECT_PATH'", "tag": "'$CI_PIPELINE_ID'"}' https://reset.inso.tuwien.ac.at/api/dockerDeployment
   only:
     - master
+    - feature/#63-database-migration
